@@ -1,5 +1,10 @@
 Version history for Perl module Alien::CMake
 
+        - Add IRC link to metadata
+        - update to cmake 3.9.1 on 64 bit Linux
+        - update to cmake 3.6.3 on 32 bit Linux
+        - update to cmake 3.9.1 on 32 bit windows
+
 0.08    05/09/2016
         - Prefer 64bit cmake on Linux x86_64 (rt#114240)
 
